Updated main.css for API Ref page to fix jump menu
author: diane fleming

--- a/src/main/resources/apiref/css/main.css
+++ b/src/main/resources/apiref/css/main.css
@@ -707,17 +707,17 @@ div.floating-menu {
     position: fixed;
     left: 0;
     top: 25%;
-    width: 14em;
+    width: 200px;
     margin-top: -2.5em;
     border:1px solid #ffffff;
     z-index:100;
     font-family: 'PT Sans', serif;
 	border: 1px solid #e2e2e2;
-	padding: 4px 15px;
+	padding: 2px 10px;
 	color: black;
 	text-decoration: none;
 	font-size: 12.5px;
-	line-height: 3em;
+	line-height: 20px;
 	background: #FFFFFF; /* old browsers */
 	background: -moz-linear-gradient(top, #FFFFFF 0%, #F3F3F3 50%, #EBEBEB 100%); /* firefox */
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FFFFFF), color-stop(50%,#F3F3F3), color-stop(100%,#EBEBEB)); /* webkit */
@@ -737,11 +737,13 @@ div.floating-menu {
 div.floating-menu a {
    display:block;
    margin:0 0.5em;
-   color: #cf2f19;
+   color: blue;
+   text-wrap: normal;
    }
    
 div.floating-menu h3 {
    display:block;
+   text-wrap: normal;
    margin:0 0.5em;
    }
 
